--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "mongoose": "^8.4.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
